--- a/NoiseMeasurement/packages.config
+++ b/NoiseMeasurement/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
+  <package id="MathNet.Numerics" version="4.0.0-beta04" targetFramework="net45" />
   <package id="NAudio" version="1.8.4" targetFramework="net45" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net45" />
   <package id="OxyPlot.WindowsForms" version="1.0.0" targetFramework="net45" />
