--- a/NoiseMeasurement/packages.config
+++ b/NoiseMeasurement/packages.config
@@ -2,9 +2,21 @@
 <packages>
   <package id="AForge" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
+  <package id="BogdanM.LocationServices.Core" version="1.0.3" targetFramework="net45" />
+  <package id="BogdanM.LocationServices.GoogleMaps" version="1.0.6" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="GMap.NET.Windows" version="1.8.0" targetFramework="net45" />
+  <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net45" />
+  <package id="GoogleMaps.LocationServices" version="1.2.0.1" targetFramework="net45" />
   <package id="MathNet.Numerics" version="4.0.0-beta04" targetFramework="net45" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net45" />
   <package id="NAudio" version="1.8.4" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net45" />
   <package id="OxyPlot.WindowsForms" version="1.0.0" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.106.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.106.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.106.0" targetFramework="net45" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net45" />
 </packages>
